<resources>
    <string name="app_name">Securify</string>

    <string name="loremIpsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nulla interdum, nibh a pellentesque ultricies, odio nunc interdum felis,
        vel faucibus magna dolor eget nulla. Donec facilisis enim at maximus molestie.
        Sed sed sem dapibus, facilisis dui a, consectetur lacus. Praesent vel aliquam lectus,
        ut condimentum est. Vestibulum ac lectus metus. Aenean vitae felis non orci cursus feugiat vitae sed quam.
    </string>

    <string-array name="tabnames">
        <item> Spiele </item>
        <item> Anderes </item>

    </string-array>

    <!-- -->
    <string name="phishing_game_string">Phishing</string>
    <string name="password_game_string">Passwörter</string>
    <string name="permissions_game_string">Permissions</string>
    <string name="settings_string">Einstellungen</string>
    <string name="achievements_string">Erfolge</string>
    <string name="highscores_string">Highscores</string>
    <string name="gameTab_string">Spiele</string>

    <string name="zero">0</string>
    <string name="samplename">name name</string>
    <string name="first">1.</string>
    <string name="second">2.</string>
    <string name="third">3.</string>
    <string name="fourth">4.</string>
    <string name="fifth">5.</string>
    <string name="password_text">Bitte geben Sie ein Passwort passend den unten aufgelisteten Regeln ein! Versuchen Sie dabei einen möglichst hohen Prozentsatz zu erreichen, der Ihnen angibt, wie sicher Ihr Passwort ist. Sie sollten sich Ihr Passwort aber auch merken können.</string>
    <string name="correct">Richtig!</string>
    <string name="wrong">Falsch!</string>
</resources>
