<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".HighscoresActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButton"
            style="@android:style/Widget.Material.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="serif"
            android:text="@string/highscores_string"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:background="#eeeeee">

    <TableRow
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingStart="4dp"
            android:text="@string/password_game_string"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placeone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placetwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placethree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/third"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points3"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placefour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fourth"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placefive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fifth"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:background="#eeeeee">

        <TableRow
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/phishing_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingStart="4dp"
                android:text="@string/phishing_game_string"
                android:textSize="18sp" />

        </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/placeone_phishing"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name1_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points1_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placetwo_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name2_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points2_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placethree_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/third"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name3_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points3_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placefour_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fourth"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name4_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points4_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placefive_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fifth"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name5_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points5_phishing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:background="#eeeeee">

        <TableRow
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/permissions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingStart="4dp"
                android:text="@string/password_game_string"
                android:textSize="18sp" />
        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placeone_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name1_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="serif"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points1_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placetwo_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name2_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points2_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placethree_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/third"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name3_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points3_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placefour_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fourth"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name4_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points4_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placefive_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fifth"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name5_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/samplename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/points5_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="18sp" />

    </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:srcCompat="@mipmap/ic_launcher" />


</LinearLayout>